--- a/rapport2.tex
+++ b/rapport2.tex
@@ -52,6 +52,7 @@
   \include{remerciements}
   \cleardoublepage
   \include{intro}
+  \cleardoublepage
   \include{contexte}
   \cleardoublepage
   \include{stage}
